--- a/home.css
+++ b/home.css
@@ -6,7 +6,7 @@ header {
 }
 
 a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     padding: 0.5rem;
     display: flex;
